[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Info/AmericaWin.png" type="Texture" id=1]
[ext_resource path="res://Assets/Info/AmericaLose.png" type="Texture" id=2]
[ext_resource path="res://GameManager/GameManager.gd" type="Script" id=3]
[ext_resource path="res://Assets/Info/FoodLose.png" type="Texture" id=4]
[ext_resource path="res://Assets/Info/MoneyLose.png" type="Texture" id=5]

[node name="GameManager" type="Node2D"]
script = ExtResource( 3 )

[node name="AmericaLose" type="Sprite" parent="."]
visible = false
position = Vector2( 258, 152 )
scale = Vector2( 2.1, 2.1 )
texture = ExtResource( 2 )

[node name="AmericaWin" type="Sprite" parent="."]
visible = false
position = Vector2( 258, 152 )
scale = Vector2( 2.1, 2.1 )
texture = ExtResource( 1 )

[node name="QuitButton" type="Button" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 204.0
margin_top = 251.0
margin_right = 252.0
margin_bottom = 272.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgain" type="Button" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 281.0
margin_top = 251.0
margin_right = 384.0
margin_bottom = 271.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodLose" type="Sprite" parent="."]
visible = false
position = Vector2( 258, 152 )
scale = Vector2( 2.1, 2.1 )
texture = ExtResource( 4 )

[node name="MoneyLose" type="Sprite" parent="."]
visible = false
position = Vector2( 258, 151 )
scale = Vector2( 2.1, 2.1 )
texture = ExtResource( 5 )

[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="PlayAgain" to="." method="_on_PlayAgain_pressed"]
